<resources>
    <string name="app_name">musiQ</string>
    <string name="app_name_bird">musiQ🐧</string>
    <string name="app_bird">🐧</string>
    <string name="top_artists_text">loading the top artists...</string>
    <string name="searchTitle">Search for artists</string>
    <string name="action_add_favourite">Add to favorites</string>
    <string name="action_remove_favorite">Remove from favorites</string>
    <string name="title_activity_login">Connect your last.fm account</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="library_no_sign_in">Or continue to the library without an account...</string>
    <string name="username_hint">Enter your last.fm username</string>
    <string name="password_hint">Enter your last.fm password</string>
    <string name="logging_in_text">logging in...</string>
    <string name="error_username_password">oops! wrong username or password!</string>
    <string name="welcome_string">welcome to musiQ!</string>
    <string name="nothing_playing">Nothing is currently playing</string>
    <string name="notification_listener_service">Notification permission</string>
    <string name="notification_listener_service_explanation">Would you like to enable notification access for this application? (Note: this is required for the application to work)</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="scrobble_single_track_success">Scrobbled %s - %s</string>
    <string name="track_loved">Track loved.</string>
    <string name="error_track_love">Could not love track. Please try again.</string>
    <string name="now_scrobbling">Now scrobbling</string>
    <string name="drawer_open">Settings</string>
    <string name="drawer_close">Settings</string>
    <string name="configure">Configure the app</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="player_preference">Manage scrobbling</string>
    <string name="scrobble_auto_detect">Enable auto-configuration of players</string>
    <string name="auto_detect">Auto-configuration</string>
    <string name="remember_me">Remember me:</string>
    <string name="recentrly_scrobbled_text">History:</string>
    <string name="about">About</string>
    <string name="about_message">musiQ %s\n\nA musical encyclopedia that supports scrobbling.\nAll information fetched from www.last.fm\n\nOpen sourced with ❤ at:\nhttps://github.com/DDihanov/musiQ\n\nDedicated to ponzi4</string>
    <string name="dialog_action_dismiss">DISMISS</string>
    <string name="scrobble_notifications">Enable scrobble notifications</string>
    <string name="NO_DATA_MESSAGE">Please log in to use this feature.</string>
    <string name="without_login_warning">Some features such as scrobbling, now playing, scrobble history and user top artists/ablums won\'t be available without logging in.</string>
    <string name="cont">CONTINUE</string>
    <string name="canc">CANCEL</string>
    <string name="note">NOTE</string>
    <string name="spired_session">Your session key has expired, please log in again.</string>
    <string name="welcome">Welcome!</string>
    <string name="tutorial_text_guide">Pull on the edge of the screen to open the settings panel or click on the drawer icon in the top left corner</string>
    <string name="settings">Settings</string>
    <string name="logout">Log out</string>
    <string name="top_artist_chart_source">Configure top artist chart source</string>
    <string name="log_in_to_use_feature">Please log in to use this feature.</string>
    <string name="select_timeframe">Select timeframe</string>
    <string name="logged_in_as">Logged in as:</string>
    <string name="scrobbles">Total scrobbles:</string>
    <string name="profile">Profile</string>
    <string name="name">Name:</string>
    <string name="country">Country:</string>
    <string name="age">Age:</string>
    <string name="playcount">Playcount:</string>
    <string name="date_registered">Date registered:</string>
    <string name="profile_url">Profile url:</string>
    <string name="last_track">Last scrobble:</string>
    <string name="search_for_friends">search for friends</string>
    <string name="limit">limit:</string>
    <string name="register"><a href="https://www.last.fm/join">Or sign up</a></string>
    <string name="track_unloved">Track unloved</string>
    <string name="unlove_track_message">Unlove track?</string>
    <string name="unlove_track_button">Unlove</string>
    <string name="last_scrobbling_text">last scrobbled</string>
    <string name="love_track_message">Love track?</string>
    <string name="love_track_button">Love</string>
    <string name="track_unlove">Track unloved</string>
    <string name="error_could_not_find_artist">Could not find artist</string>
    <string name="scrobble_review">Enable manual scrobbling and review</string>
    <string name="manage_pending_scrobbles">Manage pending scrobbles</string>
    <string name="scrobble_all">Scrobble all</string>
    <string name="no_cached_scrobbles_found">No cached scrobbles found</string>
    <string name="review_warning">WARNING: OVER 50 SCROBBLES DETECTED</string>
    <string name="review_messages">Woah, it seems there are over 50 tracks in your cached scrobbles!
        Since last.fm allows only up to 50 scrobbles at a time, please scrobble some tracks manually first.</string>
    <string name="internet_error">No internet connection found</string>
    <string name="track_scrobbled">Track scrobbled</string>
    <string name="scrobble_all_confirmation">You are about to scrobble all tracks, continue?</string>
    <string name="confirm">CONFIRM</string>
</resources>
